--- a/vote.html
+++ b/vote.html
@@ -38,15 +38,19 @@
     <div class="container mt-4">
         <!-- 筛选器区域 -->
         <div class="filter-section">
-            <h4 class="mb-3">
-                <i class="fas fa-filter me-2"></i>筛选演唱会
-            </h4>
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="mb-0">
+                    <i class="fas fa-filter me-2"></i>筛选演唱会
+                </h4>
+                <button class="btn btn-outline-primary" onclick="refreshData()">
+                    <i class="fas fa-sync-alt me-2"></i>刷新数据
+                </button>
+            </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <label class="form-label">按歌手筛选</label>
                     <select class="filter-select" id="singerFilter">
                         <option value="">全部歌手</option>
-                        <!-- 歌手选项将动态加载 -->
                     </select>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -70,7 +74,6 @@
 
         <!-- 演唱会列表 -->
         <div id="concertsList">
-            <!-- 演唱会卡片将在这里动态生成 -->
             <div class="text-center">
                 <div class="loading"></div>
                 <p class="mt-3">正在加载演唱会数据...</p>
@@ -81,36 +84,6 @@
         <div id="voteAlert" class="alert alert-success" style="display: none;">
             <i class="fas fa-check-circle me-2"></i>
             <span id="alertMessage"></span>
-        </div>
-
-        <!-- 投票指导说明 -->
-        <div class="card mt-4">
-            <div class="card-body">
-                <h5 class="card-title">
-                    <i class="fas fa-info-circle me-2 text-primary"></i>投票说明
-                </h5>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h6>评分标准</h6>
-                        <ul class="list-unstyled">
-                            <li><span class="badge bg-danger me-2">1分</span>不满意 - 体验较差</li>
-                            <li><span class="badge bg-warning me-2">2分</span>一般 - 中规中矩</li>
-                            <li><span class="badge bg-info me-2">3分</span>良好 - 值得一看</li>
-                            <li><span class="badge bg-success me-2">4分</span>优秀 - 印象深刻</li>
-                            <li><span class="badge bg-primary me-2">5分</span>超棒 - 完美体验</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <h6>投票规则</h6>
-                        <ul class="list-unstyled">
-                            <li><i class="fas fa-check text-success me-2"></i>每场演唱会只能投一次票</li>
-                            <li><i class="fas fa-check text-success me-2"></i>投票结果将实时更新</li>
-                            <li><i class="fas fa-check text-success me-2"></i>支持匿名投票，无需登录</li>
-                            <li><i class="fas fa-check text-success me-2"></i>欢迎分享您的真实体验</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -123,6 +96,8 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="https://esm.sh/@supabase/supabase-js@2"></script>
+    <script type="module" src="./js/supabase.js"></script>
     <script type="module" src="./js/vote.js"></script>
 </body>
 </html>
