--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="stats.html">统计分析</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                            <i class="fas fa-cog"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="add-chenlinong.html"><i class="fas fa-plus me-2"></i>添加陈立农</a></li>
+                            <li><a class="dropdown-item" href="image-manager.html"><i class="fas fa-images me-2"></i>图片管理</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="test-db.html"><i class="fas fa-database me-2"></i>数据库测试</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
