--- a/stats.html
+++ b/stats.html
@@ -39,9 +39,14 @@
         <!-- 图表区域 -->
         <div class="row mb-4">
             <div class="col-12">
-                <h2 class="mb-4">
-                    <i class="fas fa-chart-bar me-2 text-primary"></i>数据统计分析
-                </h2>
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">
+                        <i class="fas fa-chart-bar me-2 text-primary"></i>数据统计分析
+                    </h2>
+                    <button class="btn btn-outline-primary" onclick="refreshStatsData()">
+                        <i class="fas fa-sync-alt me-2"></i>刷新数据
+                    </button>
+                </div>
             </div>
         </div>
 
